# fastapi-bgtask-prototype

./: .gitignore  config.yml  pyproject.toml  tox.ini
src/: app.py  apptblcleanup.py  auth.py  dbsession.py
